updating kiss components in podiumd chart

--- a/charts/kiss/values.yaml
+++ b/charts/kiss/values.yaml
@@ -35,6 +35,12 @@ email:
   feedbackFrom: ""
   feedbackTo: ""
 
+logboek:
+  baseUrl: "TESTbaseUrlTEST"
+  token: "TESTtokenTEST"
+  objectTypeUrl: "TESTobjectTypeUrlTEST"
+  objectTypeVersion: "TESTobjectTypeVersionTEST"
+
 kvk:
   baseUrl: ""
   apikey: ""
