--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1839,7 +1839,7 @@ kiss:
     failedJobsHistoryLimit: 1
     image:
       repository: "ghcr.io/klantinteractie-servicesysteem/kiss-elastic-sync"
-      tag: "main-20250820085729-dd3e442"
+      tag: "0.1.2"
       pullPolicy: IfNotPresent
 
   alpine:
@@ -2163,6 +2163,7 @@ apiproxy:
       targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apikvk/vesprof/v1/v1/vestigingsprofielen"
 
 ita:
+  baseUrl: ""
   enabled: true
   replicaCount: 1
   imagePullSecrets: []
@@ -2219,7 +2220,7 @@ ita:
   web:
     image:
       repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.web"
-      tag: "1.0.2"
+      tag: "2.0.0"
       pullPolicy: IfNotPresent
 
     service:
@@ -2232,6 +2233,7 @@ ita:
       clientId: "ita"
       clientSecret: "REP_ITA_OIDC_CLIENT_SECRET_REP"
       itaSystemAccessRole: "ITA_SystemAccess"
+      functioneelBeheerderRole: "ITA_Functioneel_Beheerder"
       nameClaimType: "preferred_username"
       roleClaimType: "roles"
       objectregisterMedewerkerIdClaimType: "samaccountname"
@@ -2248,7 +2250,7 @@ ita:
 
     image:
       repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.poller"
-      tag: "1.0.2"
+      tag: "2.0.0"
       pullPolicy: Always
 
     notification:
